fix: Header and navigation alignment, styles cleanup

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -45,10 +45,6 @@
   padding: 0px 10px;
 }
 
-.navigationRight {
-  right: 0;
-}
-
 .headerLink {
   display: inline;
   margin: 0;
@@ -58,38 +54,42 @@
 
 
 @media only screen and (max-width: 800px) {
-  .headerLogo {
-    /* display: none; */
+  .headerTitle {
+    text-align: center;
+    width: 100%;
+    margin: auto;
+    padding: 10px 0px;
+    /* background: lightsalmon; */
+  }
+
+  .headerWrapper {
+    height: 120px;
+  }
+
+  .navigation {
+    display: flex;
+    justify-content: center;
+    /* background: lightpink; */
+    width: 100%;
+    padding-bottom: 10px;
   }
 }
 
 @media only screen and (max-width: 576px) {
-  .headerSiteTitle {
-    /* padding: 5px 0px 5px 5px; */
-  }
-
-  .headerTitleLink {
-    /* font-size: 23px; */
-    /* padding: 0px 3px; */
-    /* background: pink; */
-  }
 }
 
-@media only screen and (max-width: 400px) {
-  .headerSiteTitle {
-    /* display: none; */
-  }
-
-  .headerTitleLink {
-    font-size: 20px;
-    /* padding: 0px 20px 0px 0px; */
-    /* background: pink; */
-  }
+@media only screen and (max-width: 440px) {
 }
 
-@media only screen and (max-width: 400px) {
+/* iPhone 5 SE */
+@media only screen and (max-width: 375px) {
+  .headerTitle {
+    font-size: 1.9em;
+  }
 
-  .headerTitleLink {
-    /* padding: 0px 1px 0px 0px; */
+  .headerLink {
+    /* font-size: 1.2em; */
+    padding: 0 5px;
+    /* width: 100%; */
   }
 }
